# EpochMetadata

./: .clangd  .gitignore  CMakeLists.txt  PATTERN_TRANSFORMS_TODO.md  TASK.md  TODO.md  VERIFICATION_REPORT.md  common_utils.h  generate_graph.cpp  metadata_options.cpp  metadata_options.h  registry.h  transform_metadata.json  vcpkg.json
benchmark/: CMakeLists.txt  README.md
benchmark/baselines/compiler/: ast_compiler_baseline.json
benchmark/common/: benchmark_utils.h  catch_benchmark_main.cpp
benchmark/compiler/: ast_compiler_benchmark.cpp
benchmark/scripts/: middle_case_basic.txt
src/: CMakeLists.txt  bar_attribute.cpp  doc_deserialization_helper.h  metadata_options.cpp  registry.h  sql_statement.cpp  time_frame.cpp
src/asset/: symbol.cpp
src/chart_metadata/: CMakeLists.txt  axis_manager.cpp  chart_metadata_provider.cpp  chart_metadata_provider_impl.h  data_column_resolver.cpp  data_column_resolver.h  series_configuration_builder.cpp  series_configuration_builder.h
src/chart_metadata/plot_kinds/: bands.h  base.h  complex.h  multi_line.h  registry.cpp  registry.h  single_value.h  utils.h
src/compiler/: CMakeLists.txt
src/compiler/compiler/: compilation_context.h  constant_folder.h  node_builder.cpp  node_builder.h  option_validator.cpp  option_validator.h  (+3 more)
src/core/: CMakeLists.txt  bar_attribute.cpp  doc_deserialization_helper.h  metadata_options.cpp  sql_statement.cpp  symbol.cpp  time_frame.cpp
src/data/: CMakeLists.txt  aliases.h  factory.cpp  factory.h
src/dlb/: metadata.cpp  metadata.h  registration.h  registry.h
src/epoch_folio/: metadata.cpp  registration.h
src/epochflow/: CMakeLists.txt  EPOCHFLOW_DSL_REFERENCE.md
src/init/: init.cpp  init.h
src/metadata/: CMakeLists.txt  doc_deserialization_helper.h  metadata_options.cpp  metadata_options.h
src/ml_kit/: metadata.cpp  metadata.h  registration.h  registry.h
src/reports/: CMakeLists.txt  any_card_report.cpp  any_card_report.h  area_chart_report.cpp  area_chart_report.h  bar_chart_report.cpp  bar_chart_report.h  base_card_report.cpp  base_card_report.h  boolean_card_report.cpp  boolean_card_report.h  card_selector_report.cpp  card_selector_report.h  cards_report.cpp  cards_report.h  gap_report.cpp  gap_report.h  histogram_chart_report.cpp  histogram_chart_report.h  index_card_report.cpp  index_card_report.h  lines_chart_report.cpp  lines_chart_report.h  nested_pie_chart_report.cpp  nested_pie_chart_report.h  numeric_card_report.cpp  numeric_card_report.h  pie_chart_report.cpp  pie_chart_report.h  quantile_card_report.cpp  quantile_card_report.h  report_utils.h  table_report.cpp  table_report.h
src/runtime/: CMakeLists.txt  orchestrator.cpp  orchestrator.h
src/selectors/: CMakeLists.txt  card_selector.cpp  card_selector.h
src/strategy/: CMakeLists.txt  algorithm_builder.cpp  algorithm_validator.cpp  generic_function_validator.cpp  introspection.cpp  metadata.cpp  metadata.h  registration.cpp  registration.h  registry.h  ui_graph.cpp  validation.cpp
src/test/: metadata_test.cpp
src/tools/: CMakeLists.txt  data_explorer.cpp
src/transforms/: CMakeLists.txt  common.h  metadata.cpp  metadata.h  registration.cpp  registration.h  registry.h  transform_definition.cpp  tulip_charts.cpp  tulip_indicators.cpp
test/: CMakeLists.txt  catch_main.cpp  common.h  consolidation_box_investigation.cpp  dump_transform_metadata.cpp  epoch_test_runner.cpp  metadata_options_test.cpp  repro_reindex.cpp  sql_statement_test.cpp  timeframe_test.cpp
test/compiler/: test_validators.py  test_validators_interactive.sh
test/epoch_testing/: catch_transform_tester.hpp  json_transform_tester.hpp  selector_output.hpp  tearsheet_output.hpp  transform_tester_base.hpp  yaml_report_tester.hpp  yaml_transform_tester.hpp
test/files/: commission.yaml  exit_signals.yaml  futures_continuation.yaml  position_sizer.yaml  slippage.yaml  stop_loss.yaml  take_profit.yaml  trade_signals.yaml  transforms.yaml
test/integration/: AGENT.md  AGENTS.md  CATEGORIZATION_SUMMARY.md  CMakeLists.txt  FINAL_TEST_REPORT.md  PHASE1_RESULTS.md  TEST_EXECUTION_ORDER.md  TEST_RESULTS_SUMMARY.md  flow_integration_test.cpp  script_integration_test.cpp  script_integration_test_json.cpp  test_cases_categorization_proposal.md
test/ml_kit/: CMakeLists.txt  ml_kit_test.cpp
test/mocks/: CMakeLists.txt  mock_transform.h  mock_transform_manager.h
test/model_archived/: catch_main.cpp
test/runtime/: CMakeLists.txt  mock_transforms.h  multiple_reporters_integration_test.cpp  orchestrator_cross_sectional_test.cpp  orchestrator_error_handling_test.cpp  orchestrator_graph_topologies_test.cpp  orchestrator_initialization_test.cpp  orchestrator_parallel_execution_test.cpp  orchestrator_report_caching_test.cpp  orchestrator_selector_caching_test.cpp  tearsheet_merge_test.cpp  transform_flow_graph_test.cpp
test/selectors/: CMakeLists.txt  card_selector_test.cpp
test/strategy/: CMakeLists.txt  algo_validator_test.cpp  generic_function_validator_test.cpp  metadata_test.cpp  registrations_test.cpp  ui_graph_test.cpp
test/testing/: CMakeLists.txt  csv_data_loader.cpp  csv_data_loader.h  flow_graph_tester.hpp  flow_source_tester.h  selector_comparator.cpp  selector_comparator.h  test_constants.cpp  test_constants.h  transform_builder.h
test/tools/: compile_to_json.py  generate_graph_json.cpp  generate_graph_json.py  generate_runtime_graphs.sh  validate_test_outputs.py
test/transforms/: CMakeLists.txt  catch_transform_tester.hpp  dataframe_tester.cpp  dataframe_tester.hpp  registrations_test.cpp  tearsheet_output.cpp  transform_test_all.cpp  transform_test_json.cpp  transform_tester.cpp  transform_tester.hpp  transform_tester_base.cpp  transform_tester_base.hpp  transforms_metadata_test.cpp
test/unit/: CMakeLists.txt  reindex_repro_test.cpp
testing_framework/: CMakeLists.txt
testing_framework/src/: dataframe_tester.cpp  transform_tester_base.cpp
tools/: CMakeLists.txt  epoch_compile_check.cpp
tools/data_explorer/: CMakeLists.txt  data_explorer.cpp
tools/parquet_explorer/: README.md  parquet_explorer.py  requirements.txt  setup.sh
(+11759 files in other folders)
