# Unit tests organized by module
add_subdirectory(chart_metadata)   # Chart metadata tests
add_subdirectory(common)      # Shared test utilities
add_subdirectory(core)         # Core component tests
add_subdirectory(transforms)   # Transform tests
add_subdirectory(strategy)     # Strategy tests
add_subdirectory(runtime)      # Runtime unit tests
add_subdirectory(compiler)     # Compiler tests
add_subdirectory(event_markers)    # Selector tests
add_subdirectory(data)         # Data module tests (Database, Resampler, etc.)
add_subdirectory(investigation) # Investigation tests for debugging
