target_sources(epoch_script PRIVATE registration.cpp)


add_subdirectory(calendar)
add_subdirectory(cummulative)
add_subdirectory(futures)
add_subdirectory(hosseinmoein)
add_subdirectory(indicators)
add_subdirectory(operators)
add_subdirectory(price_actions)
add_subdirectory(reports)
add_subdirectory(sql)
add_subdirectory(statistics)
add_subdirectory(string)
add_subdirectory(tulip)
add_subdirectory(volatility)
